--- a/README.rmd
+++ b/README.rmd
@@ -57,7 +57,7 @@ The schedule will gradually be completed over the next days. The detailed schedu
 | Prework | | day before the workshop | download the course material from the GitHub repo | | | 
 | Module 3 | Session 1   | 9.30 - 10.00  | XGBoost | [sheets](https://katrienantonio.github.io/hands-on-machine-learning-R-module-2/sheets/ML_part2.html#XGBoost) | [script](https://katrienantonio.github.io/hands-on-machine-learning-R-module-2/scripts/13_xgboost.R) | | |
 | | | 10.00 - 10.30 | Toolbox and tensors | [sheets](https://katrienantonio.github.io/hands-on-machine-learning-R-module-3/sheets/ML_part3.html#start) | [script](https://katrienantonio.github.io/hands-on-machine-learning-R-module-3/scripts/1_getting_started.R) | | |
-| | | 10.40 - 11.00 | MNIST data | [sheets](https://katrienantonio.github.io/hands-on-machine-learning-R-module-3/sheets/ML_part3.html#data-sets) | [script](https://katrienantonio.github.io/hands-on-machine-learning-R-module-3/scripts/2_fundamentals) | | | 
+| | | 10.40 - 11.00 | MNIST data | [sheets](https://katrienantonio.github.io/hands-on-machine-learning-R-module-3/sheets/ML_part3.html#data-sets) | [script](https://katrienantonio.github.io/hands-on-machine-learning-R-module-3/scripts/2_fundamentals.R) | | | 
 | | | 11.00 - 11.20 | De-mystifying neural networks | [sheets](https://katrienantonio.github.io/hands-on-machine-learning-R-module-3/sheets/ML_part3.html#demystify) | [script](https://katrienantonio.github.io/hands-on-machine-learning-R-module-3/scripts/2_fundamentals.R) | | |
 | | | 11.30 - 12.30 | Neural networks in {keras} | [sheets](https://katrienantonio.github.io/hands-on-machine-learning-R-module-3/sheets/ML_part3.html#fundamentals) | [script](https://katrienantonio.github.io/hands-on-machine-learning-R-module-3/scripts/2_fundamentals.R) 
 | Module 3 |  Session 2  |  |  | | | |
