link to claims freq models in sheets

--- a/README.rmd
+++ b/README.rmd
@@ -60,7 +60,7 @@ The schedule will gradually be completed over the next days. The detailed schedu
 | | | 10.40 - 11.00 | MNIST data | [sheets](https://katrienantonio.github.io/hands-on-machine-learning-R-module-3/sheets/ML_part3.html#data-sets) | [script](https://katrienantonio.github.io/hands-on-machine-learning-R-module-3/scripts/2_fundamentals.R) | | | 
 | | | 11.00 - 11.20 | De-mystifying neural networks | [sheets](https://katrienantonio.github.io/hands-on-machine-learning-R-module-3/sheets/ML_part3.html#demystify) | [script](https://katrienantonio.github.io/hands-on-machine-learning-R-module-3/scripts/2_fundamentals.R) | | |
 | | | 11.30 - 12.30 | Neural networks in {keras} | [sheets](https://katrienantonio.github.io/hands-on-machine-learning-R-module-3/sheets/ML_part3.html#fundamentals) | [script](https://katrienantonio.github.io/hands-on-machine-learning-R-module-3/scripts/2_fundamentals.R) 
-| Module 3 |  Session 2  | 9.30 - 10.10 | Claim frequency with neural nets | [sheets](https://katrienantonio.github.io/hands-on-machine-learning-R-module-3/sheets/ML_part3.html#demystify) | [script](https://katrienantonio.github.io/hands-on-machine-learning-R-module-3/scripts/3_regression.R) | |
+| Module 3 |  Session 2  | 9.30 - 10.10 | Claim frequency with neural nets | [sheets](https://katrienantonio.github.io/hands-on-machine-learning-R-module-3/sheets/ML_part3.html#regression) | [script](https://katrienantonio.github.io/hands-on-machine-learning-R-module-3/scripts/3_regression.R) | |
 | | | 10.10 - 10.30 | Adding a skip connection | [sheets](https://katrienantonio.github.io/hands-on-machine-learning-R-module-3/sheets/ML_part3.html#regression) | [script](https://katrienantonio.github.io/hands-on-machine-learning-R-module-3/scripts/3_regression.R) | |
 | | | 10.40 - 11.20 | CNNs |  [sheets](https://katrienantonio.github.io/hands-on-machine-learning-R-module-3/sheets/ML_part3.html#cnn) | [script](https://katrienantonio.github.io/hands-on-machine-learning-R-module-3/scripts/4_convolutional.R) | |
 | | | 11.30 - 11.40 | Autoencoders | [sheets](https://katrienantonio.github.io/hands-on-machine-learning-R-module-3/sheets/ML_part3.html#autoencoder) | [script](https://katrienantonio.github.io/hands-on-machine-learning-R-module-3/scripts/4_convolutional.R) | |
