update Roel's affiliation

--- a/README.rmd
+++ b/README.rmd
@@ -18,15 +18,15 @@ library(emo)
 library(reticulate)
 ```
 
-## Workshop Hands-on Machine Learning in R, September 2021 edition
+## Workshop Hands-on Machine Learning in R, November 2021 edition
 
 by Katrien Antonio, Jonas Crevecoeur and Roel Henckaerts
 
-Course materials for the *Hands-on Machine Learning in R* course (September 2021).
+Course materials for the *Hands-on Machine Learning in R* course (November 2021).
 
-`r emo::ji("calendar")` Module 1 on September 7 & 8, 2021, Module 2 on September 9 & 10, 2021 and Module 3 on September 13 & 14, 2021
+`r emo::ji("calendar")` Module 1 on November 8 & 10, 2021, Module 2 on November 15 & 17, 2021 and Module 3 on November 22 & 24, 2021
 <br>
-`r emo::ji("clock")` From 9.00 am to 12.00 pm or from 1.30 pm to 4.30 pm
+`r emo::ji("clock")` From 9.00 am to 12.00 pm 
 <br>
 `r emo::ji("location")` online, organized by Capgemini Academy and Nationale Nederlanden
 
@@ -55,10 +55,10 @@ The schedule will gradually be completed over the next days. The detailed schedu
 |:-----:|:-------:|-----------|-------------|------|------|------|
 | Prework | | your own pace | check the Prework and Software Requirements instructions | | |
 | Prework | | day before the workshop | download the course material from the GitHub repo | | | 
-| Module 3 | Session 1   | 13.30 - 14.10 | Toolbox and tensors | [sheets](https://katrienantonio.github.io/hands-on-machine-learning-R-module-3/sheets/ML_part3.html#start) | [script](https://katrienantonio.github.io/hands-on-machine-learning-R-module-3/scripts/1_getting_started.R) | | |
-| | | 14.10 - 14.30 | MNIST data | [sheets](https://katrienantonio.github.io/hands-on-machine-learning-R-module-3/sheets/ML_part3.html#data-sets) | [script](https://katrienantonio.github.io/hands-on-machine-learning-R-module-3/scripts/2_fundamentals.R) | | | 
-| | | 14.40 - 15.10 | De-mystifying neural networks | [sheets](https://katrienantonio.github.io/hands-on-machine-learning-R-module-3/sheets/ML_part3.html#demystify) | [script](https://katrienantonio.github.io/hands-on-machine-learning-R-module-3/scripts/2_fundamentals.R) | | |
-| | | 15.10 - 16.30 | Neural networks in {keras} | [sheets](https://katrienantonio.github.io/hands-on-machine-learning-R-module-3/sheets/ML_part3.html#fundamentals) | [script](https://katrienantonio.github.io/hands-on-machine-learning-R-module-3/scripts/2_fundamentals.R) 
+| Module 3 | Session 1   | 09.00 - 09.40 | Toolbox and tensors | [sheets](https://katrienantonio.github.io/hands-on-machine-learning-R-module-3/sheets/ML_part3.html#start) | [script](https://katrienantonio.github.io/hands-on-machine-learning-R-module-3/scripts/1_getting_started.R) | | |
+| | | 09.40 - 10.00 | MNIST data | [sheets](https://katrienantonio.github.io/hands-on-machine-learning-R-module-3/sheets/ML_part3.html#data-sets) | [script](https://katrienantonio.github.io/hands-on-machine-learning-R-module-3/scripts/2_fundamentals.R) | | | 
+| | | 10.10 - 10.40 | De-mystifying neural networks | [sheets](https://katrienantonio.github.io/hands-on-machine-learning-R-module-3/sheets/ML_part3.html#demystify) | [script](https://katrienantonio.github.io/hands-on-machine-learning-R-module-3/scripts/2_fundamentals.R) | | |
+| | | 10.40 - 12.00 | Neural networks in {keras} | [sheets](https://katrienantonio.github.io/hands-on-machine-learning-R-module-3/sheets/ML_part3.html#fundamentals) | [script](https://katrienantonio.github.io/hands-on-machine-learning-R-module-3/scripts/2_fundamentals.R) 
 | Module 3 |  Session 2  | 9.00 - 9.40 | Claim frequency with neural nets | [sheets](https://katrienantonio.github.io/hands-on-machine-learning-R-module-3/sheets/ML_part3.html#regression) | [script](https://katrienantonio.github.io/hands-on-machine-learning-R-module-3/scripts/3_regression.R) | |
 | | | 9.40 - 10.00 | Adding a skip connection | [sheets](https://katrienantonio.github.io/hands-on-machine-learning-R-module-3/sheets/ML_part3.html#regression) | [script](https://katrienantonio.github.io/hands-on-machine-learning-R-module-3/scripts/3_regression.R) | |
 | | | 10.00 - 10.40 | CNNs |  [sheets](https://katrienantonio.github.io/hands-on-machine-learning-R-module-3/sheets/ML_part3.html#cnn) | [script](https://katrienantonio.github.io/hands-on-machine-learning-R-module-3/scripts/4_convolutional.R) | |
@@ -178,13 +178,12 @@ analytics, as well as mortality dynamics.</p>
 
 <p align="justify">*Jonas Crevecoeur* is a post-doctoral researcher in biostatistics at KU Leuven. He recently obtained his PhD within the insurance research group at KU Leuven and holds the degrees of MSc in Mathematics, MSc in Insurance Studies and MSc in Financial and Actuarial Engineering (KU Leuven). Before starting the PhD program he worked as an intern with QBE Re (Belgium office) where he studied multiline products and copulas. Jonas was a PhD fellow of the Research Foundation - Flanders (FWO, PhD fellowship fundamental research).</p> 
 
-<p align="justify"> *Roel Henckaerts* is a PhD student in insurance data science at KU
-Leuven. Roel holds the degrees of
+<p align="justify"> *Roel Henckaerts* holds the degrees of
 MSc in Mathematical Engineering, MSc in Insurance Studies and Financial
-and Actuarial Engineering (KU Leuven). Before starting the PhD program
+and Actuarial Engineering (KU Leuven) and PhD in Business Economics (KU Leuven). Before starting the PhD program
 he worked as an intern with AIG (London office) and KBC. Roel is PhD
 fellow of the Research Foundation - Flanders (FWO, PhD fellowship
-strategic basic research). After the completion of his PhD, Roel will join [Prophecy Labs](https://prophecylabs.com/): an AI/ML startup with experience in building end-to-end data solutions that provide concrete business value.</p>
+strategic basic research). After the completion of his PhD, Roel joined [Prophecy Labs](https://prophecylabs.com/): an AI/ML startup with experience in building end-to-end data solutions that provide concrete business value.</p>
 
 
 Happy learning!
