update landing page and installation instructions

--- a/README.rmd
+++ b/README.rmd
@@ -18,13 +18,13 @@ library(emo)
 library(reticulate)
 ```
 
-## Workshop Hands-on Machine Learning in R, December 2021 - January 2022 edition
+## Workshop Hands-on Machine Learning in R, October - November 2023 edition
 
 by Katrien Antonio, Jonas Crevecoeur and Roel Henckaerts
 
-Course materials for the *Hands-on Machine Learning in R* course (December 2021 - January 2022)..
+Course materials for the *Hands-on Machine Learning in R* course.
 
-`r emo::ji("calendar")` Module 1 on December 2 & 9, 2021, Module 2 on January 13 & 20, 2022 and Module 3 on January 27 & February 3, 2022
+`r emo::ji("calendar")` Module 1 on October 24 & 31, Module 2 on November 7 & 14 and Module 3 on November 21 & 28, 2023
 <br>
 `r emo::ji("clock")` From 9.30 am to 12.30 pm 
 <br>
@@ -34,8 +34,8 @@ Course materials will be posted in the week before the workshop. You are now on 
 
 ## Prework
 
-<p align="justify">The workshop requires a basic understanding of R. A good starting level is the material covered in the [werkt-U-al-met-R?](https://github.com/katrienantonio/werkt-U-al-met-R) 
-repo on Katrien's GitHub.</p>
+The workshop requires a basic understanding of R. A good starting level is the material covered in the [werkt-U-al-met-R?](https://github.com/katrienantonio/werkt-U-al-met-R) 
+repo on Katrien's GitHub.
 
 Familiarity with statistical or machine learning methods is *not* required. The workshop gradually builds up these concepts, with an emphasis on hands-on demonstrations and exercises.
 
@@ -43,9 +43,9 @@ The R and RStudio software should be up and running before coming to the worksho
 
 ## Overview
 
-<p text-align="justify"> This workshop introduces the *essential concepts of building machine learning models with R*. Throughout the workshop you will gain insights in the foundations of machine learning methods, including *resampling methods*, *data preprocessing steps* and the *tuning of parameters*. You will cover a variety of *statistical and machine learning methods*, ranging from GLMs, over tree-based machine learning methods to neural networks. You will acquire insights in the foundations of these methods, learn how to set-up the model building process, and focus on building a good understanding of the resulting model output and predictions.</p> 
+This workshop introduces the *essential concepts of building machine learning models with R*. Throughout the workshop you will gain insights in the foundations of machine learning methods, including *resampling methods*, *data preprocessing steps* and the *tuning of parameters*. You will cover a variety of *statistical and machine learning methods*, ranging from GLMs, over tree-based machine learning methods to neural networks. You will acquire insights in the foundations of these methods, learn how to set-up the model building process, and focus on building a good understanding of the resulting model output and predictions.
 
-<p align="justify">Leaving this workshop, you should have a firm grasp of the working principles of a variety of machine learning methods and be able to explore their use in practical settings. Moreover, you should have acquired the fundamental insights to explore some other methods on your own.</p> 
+Leaving this workshop, you should have a firm grasp of the working principles of a variety of machine learning methods and be able to explore their use in practical settings. Moreover, you should have acquired the fundamental insights to explore some other methods on your own.
 
 ## Schedule and Course Material
 
@@ -82,19 +82,20 @@ In two sessions we cover:
 
 Download lecture sheets in [pdf](https://katrienantonio.github.io/hands-on-machine-learning-R-module-3/sheets/ML_part3.pdf). 
 
+A recent working paper on the use of deep learning structures for the analysis of claim frequency and severity data is [https://arxiv.org/abs/2310.12671](here). The notebooks to reproduce the illustrations in the paper are [https://github.com/freekholvoet/NNforFreqSevPricing](here). 
 
 ## Software Requirements
 
 You have **two options** to join the coding exercises covered during the
-workshop. Either you join the RStudio cloud workspace dedicated to the
+workshop. Either you join the posit cloud workspace dedicated to the
 workshop, and then you'll run R in the cloud, from your browser. Or you
-use your local installation of R and RStudio.
+use your local installation of R, Python and RStudio.
 
-We kindly ask participants to **join the RStudio Cloud as default**! 
+We kindly ask participants to **join the posit cloud as default**! 
 
-### RStudio Cloud
+### posit cloud
 
-You will join our workspace on R Studio Cloud. This
+You will join our workspace on posit cloud. This
 enables a **very accessible set-up** for working with R in the cloud
 for the less experienced user!
 
@@ -103,32 +104,33 @@ for the less experienced user!
 Here are the steps you should take (before the workshop):
 
 - visit the above link
-- log in by creating an account for RStudio Cloud or by using your Google or GitHub login credentials
+- log in by creating an account for posit cloud or by using your Google or GitHub login credentials
 - join the space
 - at the top of your screen you see ‘Projects’, click ‘Projects’
-- with the ‘copy’ button (on the right) you can make your own version of the ‘Module 3 - Neural Networks’ project; in this copy you can work on the exercises, add comments etc.
-- you should now be able to visit the project and see the ‘scripts’ and ‘data’ folders on the right. Open and run the ‘installation-instructions.R’ script from the scripts folder, to see if everything works fine.
+- with the ‘copy’ button (on the right) you can make your own version of the ‘Module 3 - Neural Networks’ project (created by Roel Henckaerts); in this copy you can work on the exercises, add comments etc.
+- you should now be able to visit the project and see the ‘scripts’ and ‘data’ folders on the right
+- we already compiled the ‘installation-instructions.R’ script from the scripts folder for you; you do NOT have to run these again; instead open the '1_getting_started.R' instructions and check if these steps work. 
 
-We will have everything set up for you in the correct way. You only have to login!
+We have everything set up for you in the correct way. You only have to login!
 
 ### Local installation
 
-Alternatively, you can bring a laptop with a recent version of R and RStudio installed.
+Alternatively, you can bring a laptop with a recent version of R, Python and RStudio installed.
 Make sure you can connect your laptop to the internet (or download the
 course material one day before the start of the workshop). You will
 need:
 
-  - R (at least 3.5.2 <https://cloud.r-project.org/bin/windows/base/>)
-  - RStudio
+  - R, see <https://cloud.r-project.org/bin/windows/base/>
+  - RStudio, see 
     (<https://www.rstudio.com/products/rstudio/download/#download>)
 
 Please **run the instructions in the below script** (Part 1 and Part 2!) to install the
-required packages and Anaconda. 
+required packages as well as Python. 
 
 Make sure to **download the course material** (including scripts and data sets) from the GitHub repo one day before the workshop. Use the green button Code > Download ZIP on the GitHub repo website. As a final step, after downloading, unpack the ZIP folder and make sure you can easily access the material (in particular scripts and data sets).
 
 ```{r eval=FALSE}
-packages <- c("keras", "tensorflow", "tidyverse", "rstudioapi", "gridExtra", "rsample", "mgcv", "recipes")
+packages <- c("keras", "tensorflow", "reticulate", "tidyverse", "rstudioapi", "gridExtra", "rsample", "mgcv", "recipes")
 
 # Part 1: install all the needed R packages
 new_packages <- packages[!(packages %in% installed.packages()[,"Package"])]
@@ -141,14 +143,23 @@ if(sum(!(packages %in% installed.packages()[, "Package"]))) {
   message("All R packages are installed, part 1/2 completed!")
 }
 
-
 # Part 2: install tensorflow and keras
 
+# Download and install Python from https://www.python.org/, e.g. I have Python 3.11 (64-bit); make sure to install the 64-bit version and a version that is compatible with TensorFlow, see https://www.tensorflow.org/install
 # Download Anaconda from: https://www.anaconda.com/products/individual
 
-# Perform installation AFTER downloading Anaconda
-tensorflow::install_tensorflow(method = 'conda')
-keras::install_keras(method = 'conda')
+# Execute the following steps after installing Python
+library(keras)
+library(tensorflow)
+library(reticulate)
+path_to_python <- "C:/Users/.../AppData/Local/Programs/Python/Python311/python.exe" # replace this path with the path to your Python location
+virtualenv_create("r-reticulate", python = path_to_python)
+install_tensorflow(envname = "r-reticulate")
+install_keras(envname = "r-reticulate")
+use_virtualenv("r-reticulate")
+
+# Alternatively, you can try the instructions posted here
+# https://tensorflow.rstudio.com/install/
 
 # Run the following set of instructions as a test
 # Warning: the first time you run these instructions you may get some warnings/errors
@@ -169,21 +180,21 @@ select the code and press the Run button top right in the script window.
 
 <img src="img/Katrien.jpg" width="110"/> 
 
-<p align="justify"> [Katrien Antonio](https://katrienantonio.github.io/) is professor in
+[Katrien Antonio](https://katrienantonio.github.io/) is professor in
 insurance data science at KU Leuven and associate professor at
 University of Amsterdam. She teaches courses on data science for
 insurance, life and non-life insurance mathematics and loss models.
 Research-wise Katrien puts focus on pricing, reserving and fraud
-analytics, as well as mortality dynamics.</p>
+analytics, as well as mortality dynamics.
 
-<p align="justify">*Jonas Crevecoeur* is a post-doctoral researcher in biostatistics at KU Leuven. He recently obtained his PhD within the insurance research group at KU Leuven and holds the degrees of MSc in Mathematics, MSc in Insurance Studies and MSc in Financial and Actuarial Engineering (KU Leuven). Before starting the PhD program he worked as an intern with QBE Re (Belgium office) where he studied multiline products and copulas. Jonas was a PhD fellow of the Research Foundation - Flanders (FWO, PhD fellowship fundamental research).</p> 
+*Jonas Crevecoeur* co-designed the workshop with us, but will not teach the October - November 2023 edition. Jonas obtained his PhD within the insurance research group at KU Leuven and holds the degrees of MSc in Mathematics, MSc in Insurance Studies and MSc in Financial and Actuarial Engineering (KU Leuven). Before starting the PhD program he worked as an intern with QBE Re (Belgium office) where he studied multiline products and copulas. Jonas was a PhD fellow of the Research Foundation - Flanders (FWO, PhD fellowship fundamental research).
 
-<p align="justify"> *Roel Henckaerts* holds the degrees of
+*Roel Henckaerts* holds the degrees of
 MSc in Mathematical Engineering, MSc in Insurance Studies and Financial
 and Actuarial Engineering (KU Leuven) and PhD in Business Economics (KU Leuven). Before starting the PhD program
 he worked as an intern with AIG (London office) and KBC. Roel is PhD
 fellow of the Research Foundation - Flanders (FWO, PhD fellowship
-strategic basic research). After the completion of his PhD, Roel joined [Prophecy Labs](https://prophecylabs.com/): an AI/ML startup with experience in building end-to-end data solutions that provide concrete business value.</p>
+strategic basic research). After the completion of his PhD, Roel joined [Prophecy Labs](https://prophecylabs.com/): an AI/ML startup with experience in building end-to-end data solutions that provide concrete business value.
 
 
 Happy learning!
